# ThenMaster-

./: CMakeLists.txt  README.md  main.cpp
include/: ITask.hxx  Task.hxx  TaskExecutor.hxx
test/: CMakeLists.txt  main.cpp  unittest.cmake
